--- a/.github/workflows/python-test-publish.yml
+++ b/.github/workflows/python-test-publish.yml
@@ -35,8 +35,8 @@ jobs:
     - name: Build package
       run: python -m build
     - name: Publish package
-      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-      with:
-        user: __token__
-        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-        repository_url: https://test.pypi.org/project/python-akeneo/
+      run: pip install --upgrade twine
+    - name: Upload Repository
+      run: python3 -m twine upload --repository testpypi dist/*
+      user: __token__
+      password: ${{ secrets.TEST_PYPI_API_TOKEN }}
