--- a/.github/workflows/python-test-publish.yml
+++ b/.github/workflows/python-test-publish.yml
@@ -37,6 +37,7 @@ jobs:
     - name: Publish package
       run: pip install --upgrade twine
     - name: Upload Repository
-      run: python3 -m twine upload --repository testpypi dist/*
-      user: __token__
-      password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+      uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        user: __token__
+        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
