--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "python-akeneo"
+name = "akeneo"
 version = "0.0.1"
 authors = [
   { name="Thomas Solenthaler" },
@@ -18,5 +18,5 @@ classifiers = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/tsolenthaler/python-akeneo"
-"Bug Tracker" = "https://github.com/tsolenthaler/python-akeneo/issues"
+"Homepage" = "https://github.com/tsolenthaler/akeneo"
+"Bug Tracker" = "https://github.com/tsolenthaler/akeneo/issues"
